--- a/Lychee.Stocks/Lychee.Stocks/Views/Settings/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Settings/Index.cshtml
@@ -12,8 +12,17 @@
         <th>
             @Html.DisplayNameFor(model => model.Key)
         </th>
-        <th width="50%">
+        <th>
             @Html.DisplayNameFor(model => model.Value)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Category)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Group1)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Group2)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Description)
@@ -29,6 +38,15 @@
             </td>
             <td>
                 @Html.TextBoxFor(modelItem => item.Value, new { @class = "form-control" })
+            </td>
+            <td>
+                @Html.TextBoxFor(modelItem => item.Category, new { @class = "form-control" })
+            </td>
+            <td>
+                @Html.TextBoxFor(modelItem => item.Group1, new { @class = "form-control" })
+            </td>
+            <td>
+                @Html.TextBoxFor(modelItem => item.Group2, new { @class = "form-control" })
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
