--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stocks <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Stock List", "TrendingNow", "Report")</li>
+                            <li>@Html.ActionLink("Stock List", "List", "Stock")</li>
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Stock Analysis", "StockAnalysis", "Stock")</li>
                             <li>@Html.ActionLink("Trending Stock Analysis", "StockAnalysisTrending", "Stock")</li>
@@ -41,7 +41,6 @@
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Bids And Asks", "UpTrends", "Report")</li>
                             <li>@Html.ActionLink("Most Trades", "UpTrends", "Report")</li>
-                            <li>@Html.ActionLink("Top Volume/Losers/Winners", "MarketStatus", "Report")</li>
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Recommended Stocks", "UpTrends", "Report")</li>
                             <li>@Html.ActionLink("Suspended And On Sale", "SuspendedAndOnSale", "Report")</li>
@@ -63,6 +62,7 @@
                             <li>@Html.ActionLink("Business News", "Business", "News")</li>
                         </ul>
                     </li>
+                    <li>@Html.ActionLink("Market Status", "MarketStatus", "Report")</li>
                     <li>@Html.ActionLink("Settings", "Index", "Settings")</li>
                 </ul>
             </div>
