-Fixed GetAllActiveStockPriceRealTime to start with 0 index -Remove noise from dashboard (stocks  < 100 trades)

--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/_MACD.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/_MACD.cshtml
@@ -5,65 +5,70 @@
 @model List<Lychee.Stocks.InvestagramsApi.Models.Stocks.ScreenerResponse>
 
 
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>
-                Code
-            </th>
-            <th>
-                Last
-            </th>
-            <th>
-                Chg%
-            </th>
-            <th>
-                Open
-            </th>
-            <th>
-                Low
-            </th>
-            <th>
-                High
-            </th>
-            <th>
-                Volume
-            </th>
-            <th></th>
-        </tr>
-    </thead>
+@if (Model.Any())
+{
+    <h2 class="color-uptrend">@ViewBag.Title</h2>
 
-    <tbody>
-    @foreach (var item in Model)
-    {
-        var trendColour = StockUIClassHelper.StockColourClass(item.Open, item.Last);
-        <tr>
-            <td>
-                <a href="@string.Format(UrlConstants.InvestagramsStockUrl, item.StockCode)" target="_blank">@item.StockCode</a>
-            </td>
-            <td class="@trendColour">
-                @item.Last
-            </td>
-            <td>
-                @item.ChangePercentage%
-            </td>
-            <td>
-                @item.Open
-            </td>
-            <td>
-                @item.Low
-            </td>
-            <td>
-                @item.High
-            </td>
-            <td>
-                @item.Volume.ConvertToShortHand()
-            </td>
-            <td>
-                <a href="@Url.Action("StockAnalysis", "Stock", new { stockCode = item.StockCode})" target="_blank">Analyze</a>
-            </td>
-        </tr>
-    }
-    </tbody>
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>
+                    Code
+                </th>
+                <th>
+                    Last
+                </th>
+                <th>
+                    Chg%
+                </th>
+                <th>
+                    Open
+                </th>
+                <th>
+                    Low
+                </th>
+                <th>
+                    High
+                </th>
+                <th>
+                    Volume
+                </th>
+                <th></th>
+            </tr>
+        </thead>
 
-</table>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                var trendColour = StockUIClassHelper.StockColourClass(item.Open, item.Last);
+                <tr>
+                    <td>
+                        <a href="@string.Format(UrlConstants.InvestagramsStockUrl, item.StockCode)" target="_blank">@item.StockCode</a>
+                    </td>
+                    <td class="@trendColour">
+                        @item.Last
+                    </td>
+                    <td>
+                        @item.ChangePercentage%
+                    </td>
+                    <td>
+                        @item.Open
+                    </td>
+                    <td>
+                        @item.Low
+                    </td>
+                    <td>
+                        @item.High
+                    </td>
+                    <td>
+                        @item.Volume.ConvertToShortHand()
+                    </td>
+                    <td>
+                        <a href="@Url.Action("StockAnalysis", "Stock", new { stockCode = item.StockCode})" target="_blank">Analyze</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+
+    </table>
+}
