--- a/Lychee.Stocks/Lychee.Stocks/Views/Stock/StockAnalysis.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Stock/StockAnalysis.cshtml
@@ -61,7 +61,7 @@
             <h2>Total Score: @Model.TotalScore</h2>
         </div>
 
-        <div style="width:1000px">
+        <div>
             <canvas id="chart"></canvas>
         </div>
 
