--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
@@ -51,27 +51,18 @@
         <div>
             @Html.AsyncPartialLoader("FiftyTwoWeekLow", "Home")
         </div>
-        
 
-        <h2 class="color-downtrend">Oversold < 20</h2>
-        <p>
+        <div>
             @Html.AsyncPartialLoader("Oversold", "Home")
-        </p>
-        <hr />
+        </div>
+        
         <h2 class="color-downtrend">8/10 Down Trends</h2>
-        <p>
+        <div>
             @{ Html.RenderAction("StockTrendReport", "Stock", new { days = 10, losingWinningStreak = 8, trend = "Bearish" });}
-        </p>
+        </div>
     </div>
     <div class="col-md-4">
-
-        <h2 class="color-uptrend">MACD About to Cross</h2>
-        <p>@Html.AsyncPartialLoader("AboutToCrossMacd", "Home")</p>
-
-        <hr />
-
-        <h2 class="color-uptrend">MACD Crossing</h2>
-        <p>@Html.AsyncPartialLoader("CrossingMacd", "Home")</p>
-        
+        <div>@Html.AsyncPartialLoader("AboutToCrossMacd", "Home")</div>
+        <div>@Html.AsyncPartialLoader("CrossingMacd", "Home")</div>
     </div>
 </div>
