-Morning star doji

--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
@@ -62,6 +62,7 @@
         </div>
     </div>
     <div class="col-md-4">
+        <div>@Html.AsyncPartialLoader("MorningStarDoji", "Home")</div>
         <div>@Html.AsyncPartialLoader("AboutToCrossMacd", "Home")</div>
         <div>@Html.AsyncPartialLoader("CrossingMacd", "Home")</div>
     </div>
