--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
@@ -63,6 +63,7 @@
     </div>
     <div class="col-md-4">
         <div>@Html.AsyncPartialLoader("MorningStarDoji", "Home")</div>
+        <div>@Html.AsyncPartialLoader("Hammers", "Home")</div>
         <div>@Html.AsyncPartialLoader("AboutToCrossMacd", "Home")</div>
         <div>@Html.AsyncPartialLoader("CrossingMacd", "Home")</div>
     </div>
