--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/_BasicChartHistoryDisplay.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/_BasicChartHistoryDisplay.cshtml
@@ -5,7 +5,7 @@
 
 @if (Model.Any())
 {
-    <h2 class="color-uptrend">Morning Star Doji</h2>
+    <h2 class="color-uptrend">@ViewBag.Header</h2>
 
     <table class="table table-hover">
         <tr>
