--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
@@ -63,6 +63,7 @@
                         </ul>
                     </li>
                     <li>@Html.ActionLink("Market Status", "MarketStatus", "Report")</li>
+                    <li>@Html.ActionLink("Calculator", "Calculator", "Stock")</li>
                     <li>@Html.ActionLink("Settings", "Index", "Settings")</li>
                 </ul>
             </div>
