--- a/Lychee.Stocks/Lychee.Stocks/Views/Watchlist/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Watchlist/Index.cshtml
@@ -106,7 +106,7 @@
 </div>
 
 
-@section scripts
+@section scripts_footer
 {
     <script src="~/Scripts/Custom/Utilities.js"></script>
     <script src="~/Scripts/Custom/Confirmations.js"></script>
