--- a/Lychee.Stocks/Lychee.Stocks/Views/Prediction/CreatePrediction.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Prediction/CreatePrediction.cshtml
@@ -7,10 +7,10 @@
 <h2>Create Prediction</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -38,6 +38,6 @@
     </div>
 }
 
-@section Scripts {
+@section scripts_footer {
     @Scripts.Render("~/bundles/jqueryval")
 }
