--- a/Lychee.Stocks/Lychee.Stocks/Views/Prediction/EditPrediction.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Prediction/EditPrediction.cshtml
@@ -11,7 +11,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -52,7 +52,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Comments, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Comments, new {@class= "form-control"})
+                @Html.TextAreaFor(model => model.Comments, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Comments, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -66,6 +66,6 @@
     </div>
 }
 
-@section Scripts {
+@section scripts_footer {
     @Scripts.Render("~/bundles/jqueryval")
 }
