--- a/Lychee.Stocks/Lychee.Stocks/Views/Stock/StockAnalysis.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Stock/StockAnalysis.cshtml
@@ -8,7 +8,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-alpha/dist/Chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@0.2.1"></script>
 <script src="~/Scripts/Chart/chartjs-chart-financial.js"></script>
-<script src="~/Scripts/Chart/chart.js"></script>
+<script src="~/Scripts/Chart/stock-chart.js"></script>
 
 <div class="container-fluid should-i-buy">
     @using (Html.BeginForm("StockAnalysis", "Stock", FormMethod.Get))
