-Top 10 highest volume -Added the Lychee.Domain and Lychee.Common in LycheeSuite -Saving Events -Calculating the Cache expiry as the Trading End date next day -Remove old codes

--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/FiftyTwoWeekLow.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/FiftyTwoWeekLow.cshtml
@@ -1,4 +1,4 @@
-﻿@using Lychee.CommonHelper.Extensions
+﻿@using Lychee.CommonHelper.StringExtensions
 @using Lychee.Stocks.Domain.Helpers
 @using Lychee.Stocks.Helpers
 @using Lychee.Stocks.InvestagramsApi.Constants
