--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
@@ -42,6 +42,13 @@
         </p>
 
         <hr />
+        
+        <h2>Top 10 Highest Volumes</h2>
+        <p>
+            <canvas id="Top10VolumesCanvas" height="400"></canvas>
+        </p>
+
+        <hr />
 
         <h2>Dividends</h2>
         <p>
