-Top 10 Highest Value -Fixes

--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
@@ -40,6 +40,13 @@
         <p>
             <canvas id="Top10TradesCanvas" height="400"></canvas>
         </p>
+        
+        <hr />
+        
+        <h2>Top 10 Highest Value</h2>
+        <p>
+            <canvas id="Top10ValueCanvas" height="400"></canvas>
+        </p>
 
         <hr />
         
