--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
@@ -65,6 +65,13 @@
                         </ul>
                     </li>
                     <li>@Html.ActionLink("Market Status", "MarketStatus", "Report")</li>
+                    <li>@Html.ActionLink("Events", "Events", "Event")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Broker <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Top Broker", "Disclosure", "News")</li>
+                        </ul>
+                    </li>
                     <li>@Html.ActionLink("Calculator", "Calculator", "Stock")</li>
                     <li>@Html.ActionLink("Settings", "Index", "Settings")</li>
                 </ul>
